maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:3: error: not found: value estSUrBiscuit
  while(!estSUrBiscuit())
         ^RandomMouseMaze:5: error: not found: value prendbiscuit
  prendbiscuit()
  ^RandomMouseMaze:11: error: not found: value ==
    case i==0 => droite() 
          ^RandomMouseMaze:12: error: not found: value ==
    case i==1 => gauche()
          ^RandomMouseMaze:13: error: not found: value estFaceMur
    case (i==2 && !estFaceMur()) => avance()
                   ^RandomMouseMaze:13: error: not found: value &&
    case (i==2 && !estFaceMur()) => avance()
               ^RandomMouseMaze:13: error: not found: value ==
    case (i==2 && !estFaceMur()) => avance()
           ^RandomMouseMaze:13: error: not found: value !
    case (i==2 && !estFaceMur()) => avance()
                  ^